--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
   # Google fonts
   google_fonts: ^6.2.1
 
+  # SVG support
+  flutter_svg: ^2.0.10+1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -82,6 +85,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/images/logos/
+    - assets/images/illustrations/
     - assets/images/thumbs/
     - assets/icons/
 
